// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select MenuItem component renders using menu items 1`] = `
<div>
  <form
    data-testid="form"
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="true"
        for="best"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          Bar
        </div>
        <input
          name="best"
          type="hidden"
          value="bar"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-67 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
  </form>
</div>
`;

exports[`Select Multiple has multiple 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
        >
          <label
            class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-required-23 MuiInputLabel-required-9"
            data-shrink="false"
            for="best"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby=" mui-component-select-best"
              class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Ack, Bar
            </div>
            <input
              name="best"
              type="hidden"
              value="bar,ack"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-67 MuiSelect-icon-31"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
      >
        <label
          class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-required-23 MuiInputLabel-required-9"
          data-shrink="false"
          for="best"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby=" mui-component-select-best"
            class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Ack, Bar
          </div>
          <input
            name="best"
            type="hidden"
            value="bar,ack"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-67 MuiSelect-icon-31"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select basic component renders outlined 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="form"
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
        >
          <label
            class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-outlined-16 MuiFormLabel-required-23 MuiInputLabel-required-9"
            data-shrink="false"
            for="best"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-50 MuiOutlinedInput-root-35 MuiInputBase-formControl-51"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby=" mui-component-select-best"
              class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiSelect-outlined-28 MuiInputBase-input-61 MuiOutlinedInput-input-45"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Bar
            </div>
            <input
              name="best"
              type="hidden"
              value="bar"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-68 MuiSelect-icon-31 MuiSelect-iconOutlined-34"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-81 MuiOutlinedInput-notchedOutline-44"
            >
              <legend
                class="PrivateNotchedOutline-legendLabelled-83"
              >
                <span>
                  Test
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="form"
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
      >
        <label
          class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-outlined-16 MuiFormLabel-required-23 MuiInputLabel-required-9"
          data-shrink="false"
          for="best"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-50 MuiOutlinedInput-root-35 MuiInputBase-formControl-51"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby=" mui-component-select-best"
            class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiSelect-outlined-28 MuiInputBase-input-61 MuiOutlinedInput-input-45"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Bar
          </div>
          <input
            name="best"
            type="hidden"
            value="bar"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-68 MuiSelect-icon-31 MuiSelect-iconOutlined-34"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-81 MuiOutlinedInput-notchedOutline-44"
          >
            <legend
              class="PrivateNotchedOutline-legendLabelled-83"
            >
              <span>
                Test
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select basic component renders outlined without a label 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="form"
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
        >
          <div
            class="MuiInputBase-root-30 MuiOutlinedInput-root-15 MuiInputBase-formControl-31"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby=" mui-component-select-best"
              class="MuiSelect-root-5 MuiSelect-select-6 MuiSelect-selectMenu-9 MuiSelect-outlined-8 MuiInputBase-input-41 MuiOutlinedInput-input-25"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Bar
            </div>
            <input
              name="best"
              type="hidden"
              value="bar"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-48 MuiSelect-icon-11 MuiSelect-iconOutlined-14"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-61 MuiOutlinedInput-notchedOutline-24"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-62"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="form"
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
      >
        <div
          class="MuiInputBase-root-30 MuiOutlinedInput-root-15 MuiInputBase-formControl-31"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby=" mui-component-select-best"
            class="MuiSelect-root-5 MuiSelect-select-6 MuiSelect-selectMenu-9 MuiSelect-outlined-8 MuiInputBase-input-41 MuiOutlinedInput-input-25"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Bar
          </div>
          <input
            name="best"
            type="hidden"
            value="bar"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-48 MuiSelect-icon-11 MuiSelect-iconOutlined-14"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root-61 MuiOutlinedInput-notchedOutline-24"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend-62"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select basic component renders without errors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        data-testid="form"
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
        >
          <label
            class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-required-23 MuiInputLabel-required-9"
            data-shrink="false"
            for="best"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby=" mui-component-select-best"
              class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Bar
            </div>
            <input
              name="best"
              type="hidden"
              value="bar"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-67 MuiSelect-icon-31"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      data-testid="form"
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-marginNormal-2 MuiFormControl-fullWidth-4"
      >
        <label
          class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-required-23 MuiInputLabel-required-9"
          data-shrink="false"
          for="best"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby=" mui-component-select-best"
            class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Bar
          </div>
          <input
            name="best"
            type="hidden"
            value="bar"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-67 MuiSelect-icon-31"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select displayEmpty renders without errors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
        >
          <label
            class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-required-23 MuiInputLabel-required-9"
            data-shrink="false"
            for="best"
          >
            Test
            <span
              class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
            >
               
              *
            </span>
          </label>
          <div
            class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby=" mui-component-select-best"
              class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
              id="mui-component-select-best"
              role="button"
              tabindex="0"
            >
              Empty
            </div>
            <input
              name="best"
              type="hidden"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-67 MuiSelect-icon-31"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
      >
        <label
          class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-required-23 MuiInputLabel-required-9"
          data-shrink="false"
          for="best"
        >
          Test
          <span
            class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10"
          >
             
            *
          </span>
        </label>
        <div
          class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-36"
        >
          <div
            aria-haspopup="listbox"
            aria-labelledby=" mui-component-select-best"
            class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
            id="mui-component-select-best"
            role="button"
            tabindex="0"
          >
            Empty
          </div>
          <input
            name="best"
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root-67 MuiSelect-icon-31"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select errors with multiple has empty initialValues and submit 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="false"
        for="best"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10 MuiFormLabel-error-21 MuiInputLabel-error-8"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-error-55 MuiInput-error-41 MuiInputBase-formControl-50 MuiInput-formControl-36"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          name="best"
          type="hidden"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-67 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-80 MuiFormHelperText-error-81 MuiFormHelperText-required-87"
      >
        is not best
      </p>
    </div>
    <button
      class="MuiButtonBase-root-117 MuiButton-root-88 MuiButton-contained-96 MuiButton-containedPrimary-97"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-89"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-120"
      />
    </button>
  </form>
</div>
`;

exports[`Select errors with multiple renders the helper text because no error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="false"
        for="best"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10 MuiFormLabel-error-21 MuiInputLabel-error-8"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-error-55 MuiInput-error-41 MuiInputBase-formControl-50 MuiInput-formControl-36"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          name="best"
          type="hidden"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-67 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-80 MuiFormHelperText-error-81 MuiFormHelperText-required-87"
      >
        is not best
      </p>
    </div>
    <button
      class="MuiButtonBase-root-117 MuiButton-root-88 MuiButton-contained-96 MuiButton-containedPrimary-97"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-89"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-120"
      />
    </button>
  </form>
</div>
`;

exports[`Select errors with multiple shows submit error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="true"
        for="best"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10 MuiFormLabel-error-21 MuiInputLabel-error-8"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-error-55 MuiInput-error-41 MuiInputBase-formControl-50 MuiInput-formControl-36"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          Ack
        </div>
        <input
          name="best"
          type="hidden"
          value="ack"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-67 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-80 MuiFormHelperText-error-81 MuiFormHelperText-filled-86 MuiFormHelperText-required-87"
      >
        submit error
      </p>
    </div>
    <button
      class="MuiButtonBase-root-117 MuiButton-root-88 MuiButton-contained-96 MuiButton-containedPrimary-97"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-89"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-120"
      />
    </button>
  </form>
</div>
`;

exports[`Select errors with single has empty initialValues and submit 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="false"
        for="best"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10 MuiFormLabel-error-21 MuiInputLabel-error-8"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-error-55 MuiInput-error-41 MuiInputBase-formControl-50 MuiInput-formControl-36"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          name="best"
          type="hidden"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-67 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-80 MuiFormHelperText-error-81 MuiFormHelperText-required-87"
      >
        is not best
      </p>
    </div>
    <button
      class="MuiButtonBase-root-117 MuiButton-root-88 MuiButton-contained-96 MuiButton-containedPrimary-97"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-89"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-120"
      />
    </button>
  </form>
</div>
`;

exports[`Select errors with single renders the helper text because no error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="false"
        for="best"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10 MuiFormLabel-error-21 MuiInputLabel-error-8"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-error-55 MuiInput-error-41 MuiInputBase-formControl-50 MuiInput-formControl-36"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          <span>
            ​
          </span>
        </div>
        <input
          name="best"
          type="hidden"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-67 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-80 MuiFormHelperText-error-81 MuiFormHelperText-required-87"
      >
        is not best
      </p>
    </div>
    <button
      class="MuiButtonBase-root-117 MuiButton-root-88 MuiButton-contained-96 MuiButton-containedPrimary-97"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-89"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-120"
      />
    </button>
  </form>
</div>
`;

exports[`Select errors with single shows submit error 1`] = `
<div>
  <form
    novalidate=""
  >
    <div
      class="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
    >
      <label
        class="MuiFormLabel-root-17 MuiInputLabel-root-5 MuiInputLabel-formControl-11 MuiInputLabel-animated-14 MuiInputLabel-shrink-13 MuiFormLabel-error-21 MuiInputLabel-error-8 MuiFormLabel-filled-22 MuiFormLabel-required-23 MuiInputLabel-required-9"
        data-shrink="true"
        for="best"
      >
        Test
        <span
          class="MuiFormLabel-asterisk-24 MuiInputLabel-asterisk-10 MuiFormLabel-error-21 MuiInputLabel-error-8"
        >
           
          *
        </span>
      </label>
      <div
        class="MuiInputBase-root-49 MuiInput-root-35 MuiInput-underline-40 MuiInputBase-error-55 MuiInput-error-41 MuiInputBase-formControl-50 MuiInput-formControl-36"
      >
        <div
          aria-haspopup="listbox"
          aria-labelledby=" mui-component-select-best"
          class="MuiSelect-root-25 MuiSelect-select-26 MuiSelect-selectMenu-29 MuiInputBase-input-60 MuiInput-input-45"
          id="mui-component-select-best"
          role="button"
          tabindex="0"
        >
          Ack
        </div>
        <input
          name="best"
          type="hidden"
          value="ack"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root-67 MuiSelect-icon-31"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
      <p
        class="MuiFormHelperText-root-80 MuiFormHelperText-error-81 MuiFormHelperText-filled-86 MuiFormHelperText-required-87"
      >
        submit error
      </p>
    </div>
    <button
      class="MuiButtonBase-root-117 MuiButton-root-88 MuiButton-contained-96 MuiButton-containedPrimary-97"
      data-testid="submit"
      tabindex="0"
      type="submit"
    >
      <span
        class="MuiButton-label-89"
      >
        Submit
      </span>
      <span
        class="MuiTouchRipple-root-120"
      />
    </button>
  </form>
</div>
`;
